--- a/main.html
+++ b/main.html
@@ -9,15 +9,28 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<ol>
-		<li>
-			<a href="https://en.wikipedia.org/wiki/Golden_Retriever" ><img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" /></a>
-		</li>
+ <h1>Dog Breeds Ritesh Might Like</h1>
 
-		<li>
-			<a href="https://en.wikipedia.org/wiki/Poodle"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" /></a>
-		</li>
-	</ol>
+  <ul>
+    <li>
+      <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+        <img 
+          src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" 
+          alt="Golden Retriever" 
+          width="300"
+        >
+      </a>
+    </li>
+    <li>
+      <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+        <img 
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" 
+          alt="Poodle" 
+          width="300"
+        >
+      </a>
+    </li>
+  </ul>
 	
     <script type="text/javascript" src="./script.js">
 </script>
